--- a/estil.less
+++ b/estil.less
@@ -180,7 +180,7 @@
         width: 50%;
 
         .evitar-calc {
-            height: 500px;
+            height: 480px;
             position: relative;
             padding: 10px;
             overflow: auto;
@@ -228,6 +228,10 @@
 
 
 
+}
+
+.fletxa {
+    overflow: auto;
 }
 
 .titol {
@@ -308,8 +312,9 @@
     .text-carousel {
         position: relative;
         float: left;
-        width: 80%;
+        width: 70%;
         z-index: 999;
+        font-size: 0.9em;
     }
 
     .imatge-carousel {
@@ -338,6 +343,7 @@
         width: 42%;
         button {
             margin-top: -10px;
+            //margin-top: 20px;
         }
 
     }
@@ -373,6 +379,10 @@
         }
         border-color: @taronja;
     }
+    
+    .photo {
+        border-width: 0;
+    }
 }
 
 
@@ -383,6 +393,7 @@
         height: 200px;
         margin-top: 50px;
         color: white;
+        margin-bottom: 20px;
 
         /*.container {
             position: relative;
