--- a/comu.less
+++ b/comu.less
@@ -597,6 +597,12 @@ footer {
         padding-top: 20px;
     }
     
+    .logotip {
+        h2 {
+            display: inline-block;
+            font-size: 1.5em;
+        }
+    }
 }
 
 #finalDeTot {
